force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Drug allergies</fullName>
            </value>
            <value>
                <fullName>Food allergies</fullName>
            </value>
            <value>
                <fullName>Inhalant allergie</fullName>
            </value>
            <value>
                <fullName>Insect stings and bites</fullName>
            </value>
            <value>
                <fullName>Latex allergy</fullName>
            </value>
            <value>
                <fullName>Skin allergies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>