force-app/main/default/objects/Contact/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A +</fullName>
            </value>
            <value>
                <fullName>A -</fullName>
            </value>
            <value>
                <fullName>B +</fullName>
            </value>
            <value>
                <fullName>B -</fullName>
            </value>
            <value>
                <fullName>AB +</fullName>
            </value>
            <value>
                <fullName>AB -</fullName>
            </value>
            <value>
                <fullName>O +</fullName>
            </value>
            <value>
                <fullName>O -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>