force-app/main/default/objects/Contact/fields/Current_Medication__c.field-meta.xml
<CustomField>
    <fullName>Current_Medication__c</fullName>
    <label>Current Medication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>